--- a/my-app/src/assets/css/Skills.css
+++ b/my-app/src/assets/css/Skills.css
@@ -64,15 +64,22 @@
             font-size: 0.75rem;
         } */
 
-    @media (min-width: 320px) {
+    /* @media only screen and (min-device-width: 280px) and (max-device-width: 480px) {
+        .skills-container {
+            width: 10vw;
+            transform: translate(-50%, -00%);
+            max-width: 80%;
+        }
+
+    } */
+
+    /* @media (min-width: 320px) {
         .skills-title {
             font-size:20px;
             margin-bottom: 1rem;
         }
-        /* .skills-container {
-            
-        } */
-    }
+        
+    } */
 
     }
 
