--- a/my-app/src/assets/css/Landing.css
+++ b/my-app/src/assets/css/Landing.css
@@ -14,7 +14,7 @@
     width: 1550px;
     min-height: 50px;
     margin: 70px auto 0;
-    margin-top:15rem;
+    margin-top:5rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -36,6 +36,7 @@
     box-sizing: border-box;
     display: inline-block;
     overflow: hidden;
+    border-radius: 18px;
     /* background: #ff0; */
   }
 /* -----------------------------------------------------------------------------------*/
@@ -68,8 +69,9 @@
       left: 10px;
       bottom: 10px;
       right: 10px;
-      background: #00F0FF;
-      opacity: .98;
+      background: #2c426a;
+      border-radius: 18px;
+      opacity: .95;
       transform: scaleY(0);
       transition: transform .5s;
     }
