added a resume.jsx and .css, uploaded additional assets

--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -182,6 +182,7 @@
         width: 65vw;
         margin-bottom: 2rem;
         margin-right: 4rem;
+        color: #2c426a;
     }
     .about-picture {
         height: 400px;
