--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -150,7 +150,7 @@
   }
   
   .card_body p {
-    color: var(--dark);
+    color: var(--primary);
     font-size: 18px;
     line-height: 1.5;
   }
