--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -8,25 +8,51 @@
 .nav {
     /* position: fixed; */
     top: 0;
-    display: block;
-    /* background-color: black; */
+    /* display: block; */
     width: 100%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #2c426a;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div {
+    width: 25px;
+    height: 2px;
+    background-color: white;
+    margin: 5px;
+}
+
+.logo {
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 20px;
 }
 
 .nav-ul {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin: auto;
     background: #2c426a;
-    width: 100%;
+    width: 30%;
     padding: 1.5rem;
+    letter-spacing: 3px;
+
 }
 
 .nav-item {
     color: #00D1FF;
     text-decoration: none;
+    list-style: none;
 }
 
 .nav-item:hover {
@@ -74,17 +100,54 @@ li {
     height: 20px; */
 }
 
-.toggle-button .bar {
+/* .toggle-button .bar {
     height: 3px;
     width: 100%;
     background-color: white;
     border-radius: 15px;
-  }
+  } */
 
 
 /* THIS IS WHERE I PUT RESPONSIVE MEDIA QUERIES */
     @media (max-width: 600px) {
         .toggle-button {
             display:flex;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        /* gets rid of scrolling */
+        .body {
+            overflow-x: hidden;
+        }
+        .nav-ul {
+            position: absolute;
+            right: 0px;
+            height: 92vh;
+            top: 8vh;
+            background-color: #2c426a;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 50%;
+            transform: translateX(100%);
+            transition: transform 0.5s ease-in;
+        }
+        .nav-ul li {
+            opacity: 0;
+        }
+        .burger {
+            display: block;
+            cursor: pointer;
+        }
+    }
+
+    .nav-active {
+        transform: translateX(0%);
+    }
+
+    @media screen and (max-width: 1024px) {
+        .nav-ul {
+            width: 60%;
         }
     }
