--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -5,38 +5,94 @@
     border: 0;
   }
 
+.navbar {
+    background-color: #2c426a;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    z-index: 1;
+}
+
+.menu-bars {
+    margin-left: 2rem;
+    font-size: 2rem;
+    background: none;
+}
+
 .nav {
     /* position: fixed; */
-    top: 0;
+    /* top: 0; */
     /* display: block; */
-    width: 100%;
+    /* width: 100%;
 
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
+    min-height: 8vh; */
     background-color: #2c426a;
+    width: 250px /* 100% */;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+    z-index: 1;
 }
 
-.burger {
-    display: none;
+.nav.active {
+    left: 0;
+    transition: 350ms ease-in;
+    /* transform: translateX(00%);
+    transition: transform 0.5s ease-in; */
 }
 
-.burger div {
-    width: 25px;
-    height: 2px;
-    background-color: white;
-    margin: 5px;
+.nav-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 8px 0px 9px 16px;
+    height: 60px;
 }
 
-.logo {
+.nav-item {
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+}
+
+.nav-menu-items {
+    width: 100%;
+}
+
+.navbar-toggle {
+    background-color: #2c426a;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+span {
+    margin-left: 16px;
+}
+
+
+/* .logo {
     color: white;
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
-}
+} */
 
-.nav-ul {
+/* .nav-ul {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -47,17 +103,27 @@
     padding: 1.5rem;
     letter-spacing: 3px;
 
-}
+} */
 
-.nav-item {
+/* .nav-item {
     color: #00D1FF;
     text-decoration: none;
     list-style: none;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+} */
+
+.nav-text:hover {
+    color: #00D1FF;
+    transition: color 600ms ease 0s;
+    /* background-color: #00D1FF; */
 }
 
-.nav-item:hover {
-    color: white;
-    transition: color 600ms ease 0s;
+.nav-item {
+    text-decoration: none;
 }
 
 /* .brand {
@@ -68,55 +134,37 @@
     position: fixed;
 } */
 
-ol, ul {
+/* ol, ul {
     list-style: none;
-}
+    
+} */
 
-ul {
+/* ul {
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 40px;
-}
+} */
 
-li {
+/* li {
     text-transform: uppercase;
-    /* font-weight: 600; */
+    
     letter-spacing: 1px;
     font-size: 0.8em;
     font-family: 'Trispace', sans-serif;
     font-weight: 300;
-}
-
-.toggle-button {
-    /* position: absolute;
-    top: 1rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 30px;
-    height: 20px; */
-}
-
-/* .toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 15px;
-  } */
-
+} */
 
 /* THIS IS WHERE I PUT RESPONSIVE MEDIA QUERIES */
-    @media (max-width: 600px) {
+    /* @media (max-width: 600px) {
         .toggle-button {
             display:flex;
         }
-    }
+    } */
 
-    @media screen and (max-width: 768px) {
-        /* gets rid of scrolling */
+   /*  @media screen and (max-width: 768px) {
+        
         .body {
             overflow-x: hidden;
         }
@@ -146,8 +194,30 @@ li {
         transform: translateX(0%);
     }
 
+    @keyframes navLinkFade {
+        from {
+            opacity: 0;
+            transform: translate(50px);
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
+    .toggle .burger__line1 {
+        transform: rotate(-45deg) translate(-5px,6px);
+    }
+
+    .toggle .burger__line2 {
+        opacity: 0;
+    }
+
+    .toggle .burger__line3 {
+        transform: rotate(45deg) translate(-5px,6px);
+    }
+
     @media screen and (max-width: 1024px) {
         .nav-ul {
             width: 60%;
         }
-    }
+    } */
