change my iconography, made some brand edits, positioned ul in nav bar

--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -10,7 +10,7 @@
     display: block;
     margin: 0;
     height: 100;
-    background: linear-gradient(to top,#00F0FF 30%, #f0e9dc 60%);
+    background: linear-gradient(to top,#2c426a 30%, #f0e9dc 60%);
     background-attachment: fixed;
   }
   
