--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -31,22 +31,22 @@
     align-items: center;
     min-height: 8vh; */
     background-color: #2c426a;
-    width: 250px /* 100% */;
+    width: 250px/*  100% */;
     height: 100vh;
     display: flex;
     justify-content: center;
     position: fixed;
     top: 0;
     left: -100%;
-    transition: 850ms;
+    transition: 2000ms;
     z-index: 1;
 }
 
 .nav.active {
     left: 0;
     transition: 350ms ease-in;
-    /* transform: translateX(00%);
-    transition: transform 0.5s ease-in; */
+    transform: translateX(00%);
+    transition: transform 1500ms ease-in;
 }
 
 .nav-text {
