--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -6,7 +6,7 @@
   }
 
 .navbar {
-    background-color: #2c426a;
+    background-color: #07678E;
     height: 80px;
     display: flex;
     justify-content: start;
@@ -30,7 +30,7 @@
     justify-content: space-around;
     align-items: center;
     min-height: 8vh; */
-    background-color: #2c426a;
+    background-color: #07678E;
     width: 250px/*  100% */;
     height: 100vh;
     display: flex;
@@ -72,7 +72,7 @@
 }
 
 .navbar-toggle {
-    background-color: #2c426a;
+    background-color: #07678E;
     width: 100%;
     height: 80px;
     display: flex;
