--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -162,8 +162,8 @@
       }
     }
 
-    @media only screen and (min-device-width: 480px) and (max-width: 768px) {
-      .projCard-container /* .projCard-box */ {
+   /*  @media only screen and (min-device-width: 480px) and (max-width: 768px) {
+      .projCard-container {
          
         display: flex;
         flex-direction: column;
@@ -178,10 +178,10 @@
         transform: translate(0%, -10%);
         
       }
-    }
+    } */
 
-    @media only screen and (min-device-width: 375px)and (max-width: 926px) {
-      .projCard-container /* .projCard-box */ {
+    @media only screen and (min-device-width: 375px)and (max-width: 768px) {
+      .projCard-container {
          
           display: flex;
           flex-direction: column;
@@ -191,9 +191,9 @@
       }
 
       .projCard-container .projCard-box {
-        width: 325px;
+        width: 90vw;
         height: 300px;
-        
+        transform: translate(-2%, 0%);
       }
 
       .projCard-container .projCard-box .img-wrapper {
@@ -233,7 +233,6 @@
     .projCard-container .projCard-box {
       margin-top: 2rem;
       width: 90vw;
-      /* height: 300px; */
       /* border: solid purple; */
       transform: translate(2%, 0%);
       box-sizing: border-box;
@@ -250,13 +249,8 @@
     }
 
     .projCard-container .projCard-box .img-wrapper img {
-    
-      /* max-width: 180%; */
-      /* padding-right: 15rem; */
-      /* border: solid red; */
-     width: 125vw;
-     height: auto;
-
+      width: 125vw;
+      height: auto;
     }
 
     .projCard-container .projCard-box .details-box {
@@ -296,8 +290,10 @@
     }
 
     .projCard-container .projCard-box {
-      width: 475px;
+      width: 90vw;
       height: 300px;
+      box-sizing: border-box;
+      display: inline-block;
     }
 
     .projCard-container .projCard-box .img-wrapper {
@@ -311,14 +307,27 @@
     .projCard-container .projCard-box .img-wrapper img {
     
       max-width: 180%;
-      padding-right: 15rem;
-      height: 300px;
+      padding-right: 20rem;
+      padding-bottom: 20rem;
+      width: 125vw;
+      height: auto;
 
     }
 
+    .projCard-container .projCard-box .details-box .content-box {
+      
+      /* border: solid brown; */
+      top: 60px;
+      transform: translate(5%, -20%);
+      width:80vw;
+      /* border: solid yellow; */
+    }
+
     .projCard-container .projCard-box .details-box .content-box p {
-      font-size: 25px;
+      font-size: 60px;
       margin-top: 11rem;
+      transform: translate(0%, -70%);
+      /* border: solid brown; */
     }
   }
 
