--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -134,9 +134,9 @@
       }
 
       .projCard-container .projCard-box {
-        width: 280px;
+        width: 90vw;
         height: 300px;
-        transform: translate(0%, -10%);
+        transform: translate(-3%, -10%);
         
       }
 
@@ -161,24 +161,6 @@
         margin-top: 11rem;
       }
     }
-
-   /*  @media only screen and (min-device-width: 480px) and (max-width: 768px) {
-      .projCard-container {
-         
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        width: 100%;
-        
-      }
-
-      .projCard-container .projCard-box {
-        width: 280px;
-        height: 300px;
-        transform: translate(0%, -10%);
-        
-      }
-    } */
 
     @media only screen and (min-device-width: 375px)and (max-width: 768px) {
       .projCard-container {
@@ -294,6 +276,7 @@
       height: 300px;
       box-sizing: border-box;
       display: inline-block;
+      transform: translate(3.5%, 0%);
     }
 
     .projCard-container .projCard-box .img-wrapper {
@@ -331,91 +314,10 @@
     }
   }
 
-    
-
-   /*  @media only screen and (min-device-width: 280px) and (max-device-width: 480px) {
-      .resume__container {
-          transform: translate(2%, 5%);
-
-      }
-
-      .resume__image {
-          height: 65vh;
-          transition: 0.5s;
-      } */
-
-      /* @media(hover: hover) {
-          .resume__image:hover {
-              z-index: 1;
-              transform: scale(1.05);
-              box-shadow: 0 25px 40px rgba(0,0,0,.5);
-          }
-      } */
-  
-
-  /* @media only screen and (min-device-width: 480px) and (max-width: 768px) {
-      .resume__container {
-          transform: translate(30%, 10%);
-      }
-
-      .resume__image {
-          height: 65vh;
-          transition: 0.5s;
-      }
-  }
-
-  @media only screen and (min-device-width: 375px)and (max-width: 926px) {
-      .resume__container {
-          transform: translate(0%, 5%);
-          width: 95vw;
-      }
-
-      .resume__image {
-          height: 55vh;
-          transition: 0.5s;
-      }
-  }
-
-
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-      .resume__container {
-          transform: translate(9%, 8%);
-          width: 80vw;
-      }
-
-      .resume__image {
-          height: 80vh;
-          transition: 0.5s;
-      }
-  }
-
-  @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
-      .resume__container {
-          transform: translate(45%, 8%);
-          width: 50vw;
-      }
-
-      .resume__image {
-          height: 80vh;
-          transition: 0.5s;
-      }
-  }
-
-  @media only screen and (min-device-width: 1366px) and (max-device-width: 2600px) {
-      .resume__container {
-          transform: translate(45%, 8%);
-          width: 50vw;
-      }
-
-      .resume__image {
-          height: 80vh;
-          transition: 0.5s;
-      }
-  } */
 
 /* For Landscape view */
 
-/* @media (orientation: landscape) and (min-width: 468px) and (max-width: 768px) {
+@media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
   .projCard-container {
         
     display: flex;
@@ -426,99 +328,45 @@
   }
 
   .projCard-container .projCard-box {
-    width: 350px;
+    width: 90vw;
     height: 300px;
-    transform: translate(22%, 0%);
+    transform: translate(1%, 0%);
   }
-} */
 
-@media (orientation: landscape) and (max-width: 768px) {
+  .projCard-container .projCard-box .img-wrapper img {
+    
+   /*  max-width: 180%;
+    padding-right: 20rem;
+    padding-bottom: 20rem;
+    width: 125vw;
+    height: auto; */
+    width: 125vw;
+    height: auto;
+
+  }
+}
+
+/* @media (orientation: landscape) and (min-width: 375px) and (max-width: 768px) {
   .projCard-container {
         
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
-      
+    
   }
 
   .projCard-container .projCard-box {
-    width: 350px;
+    width: 90vw;
     height: 300px;
-    transform: translate(5%, -15%);
-  }
-
-
-  .projCard-container .projCard-box .img-wrapper {
-  
-    background-size: cover;
-    background-position: center;
-    height: 300px;
-
+    transform: translate(1%, 0%);
   }
 
   .projCard-container .projCard-box .img-wrapper img {
-  
-    max-width: 180%;
-    padding-right: 15rem;
-    height: 300px;
+    
+   
+    width: 125vw;
+    height: auto;
 
-  }
-
-  .projCard-container .projCard-box .details-box .content-box p {
-    font-size: 25px;
-    margin-top: 11rem;
-  }
-}
-
-
-@media (orientation: landscape) and (max-width: 1024px) {
-  .projCard-container /* .projCard-box */ {
-        
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-      
-  }
-
-  .projCard-container .projCard-box {
-    width: 350px;
-    height: 300px;
-    transform: translate(5%, -15%);
-  }
-
-
-  .projCard-container .projCard-box .img-wrapper {
-  
-    background-size: cover;
-    background-position: center;
-    height: 300px;
-
-  }
-
-  .projCard-container .projCard-box .img-wrapper img {
-  
-    max-width: 180%;
-    padding-right: 15rem;
-    height: 300px;
-
-  }
-
-  .projCard-container .projCard-box .details-box .content-box p {
-    font-size: 25px;
-    margin-top: 11rem;
-  }
-}
-
-/* @media (orientation: landscape) and (max-device-width: 1366px) {
-  .resume__container {
-      transform: translate(40%, 8%);
-      width: 55vw;
-  }
-
-  .resume__image {
-      height: 80vh;
-      transition: 0.5s;
   }
 } */
