--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -86,11 +86,14 @@
   .card__face--back {
     background-color: var(--light);
     transform: rotateY(180deg);
+    overflow-x: hidden;
+    overflow-y: auto;
   }
   
   .card__content {
     width: 100%;
     height: 100%;
+    
   }
   
   .card__header {
