made some changes to about me

--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -23,7 +23,7 @@
     justify-content:space-evenly;
     color: #2c426a;
     grid-area: email;
-    background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png")
+    /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png") */
 }
 
 .intro-text {
