--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -183,6 +183,13 @@
         margin-bottom: 2rem;
         margin-right: 4rem;
         color: #2c426a;
+        overflow-x: hidden;
+            overflow-y: auto;
+    }
+
+    .sideBio h3 {
+        display: flex;
+        /* justify-content: center; */
     }
     .about-picture {
         height: 400px;
@@ -201,9 +208,11 @@
         text-align: center;
     }
 
-    p {
+    .sideBio p {
         font-family: 'Space Grotesk', sans-serif;
         font-weight: 300;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
 
     .stackIcons {
@@ -570,6 +579,7 @@
     @media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
         .container {
             width: 100%;
+            transform: translate(0%, 0%);
         }
 
         .container .card {
@@ -577,14 +587,19 @@
             display: flex;
             flex-direction: column;
             height: 200vh;
+            /* transform: translate(0%, 0%); */
         }
 
         .container .card h2 {
             font-size: 30px;
         }
 
+        .container .card__body h3 {
+            font-size: 25px;
+        }
+
         .container .card p {
-            font-size: 20px;
+            font-size: 25px;
         }
 
         #bio-wrapper {
@@ -593,12 +608,13 @@
             width: 90vw;
             margin-top: 10vh;
             /* grid-gap: 60px; */
+            
         }
 
         .overlay-practice {
             width: 90vw;
             margin-right: -10px;
-            margin-top: 30vh;
+            margin-top: 40vh;
             transform: translate(0%, 0%);
             
         }
@@ -616,7 +632,7 @@
 
         .sideBio {
             width: 90vw;
-            height: 53vh;
+            height: 60vh;
             /* margin-top: 20px;  */
             /* transform: translate(-10%, 0%); */
         }
@@ -629,6 +645,14 @@
 
         .sideBio p {
             font-size: 16px;
+            overflow-x: hidden;
+            overflow-y: auto;
+            width: 75vw;
+        }
+
+        .sideBio h3 {
+            justify-content: center;
+            /* align-items: center; */
         }
 
     }
@@ -677,9 +701,13 @@
 
         .sideBio {
             width: 50vw;
-            height: 53vh;
+            height: 60vh;
             /* margin-top: 20px;  */
             transform: translate(-10%, 0%);
+        }
+
+        .sideBio h3 {
+            justify-content: center;
         }
 
         .sideBio .links-about {
@@ -690,6 +718,8 @@
 
         .sideBio p {
             font-size: 17px;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
     }
 
@@ -745,3 +775,70 @@
 
 }
 } */
+
+@media (orientation: landscape) and (min-width: 1000px) and (max-height: 900px) {
+    .container {
+        width: 100%;
+    }
+
+    .container .card {
+        width: 100vw;
+    }
+
+    .container .card h2 {
+        font-size: 18px;
+    }
+
+    .container .card p {
+        font-size: 15px;
+    }
+
+    #bio-wrapper {
+        /* display: flex; */
+        /* flex-direction: column; */
+        width: 90vw;
+        margin-top: 10vh;
+        grid-gap: 60px;
+    }
+
+    .overlay-practice {
+        width: 40vw;
+        margin-right: -10px;
+        transform: translate(-5%, 0%);
+    }
+
+    .overlay-practice .img-box:hover {
+        z-index: 1;
+        transform: scale(1.05);
+        box-shadow: 0 25px 40px rgba(0,0,0,.5);
+
+    }
+
+    .overlay-practice .img-box {
+        width: 90%;
+    }
+
+    .sideBio {
+        width: 50vw;
+        height: 90vh;
+        /* margin-top: 20px;  */
+        transform: translate(-10%, 0%);
+    }
+
+    .sideBio h3 {
+        justify-content: center;
+    }
+
+    .sideBio .links-about {
+        
+        padding-top: 0;
+        transform: translate(0%, -60%);
+    }
+
+    .sideBio p {
+        font-size: 15.5px;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+}
