--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -38,6 +38,14 @@
    /*  flex-wrap: wrap; */
     justify-content: space-between;
   }
+
+  .img__container {
+    object-fit: cover;
+  }
+
+  .front__image {
+    object-fit: cover;
+  }
   
   /*Preserve-3d along with transform allows us to perform the transform in a 3D space*/
   .card__inner {
@@ -159,9 +167,4 @@
   }
 
 
-  @media only screen and (min-device-width: 280px) and (max-device-width: 480px) {
-   
-    .card_body p {
-        font-size: 100px;
-    }
-  }
+ 
