--- a/my-app/src/assets/css/Contact.css
+++ b/my-app/src/assets/css/Contact.css
@@ -24,82 +24,112 @@
 /* ------------------------------------------------------------------------------- */
 /* THIS IS FOR RESPONSIVENESS*/
 
-/* @media all and (max-width: 500px) {
-    #mainPage-Wrapper {
-
-    }
-} */
-
-/* @media (orientation: landscape) {
-    #mainPage-Wrapper {
-
-    }
-} */
-
-/* Viewports between 320px and 480px wide */
-@media only screen and (/* min-device-width: 280px) and ( */max-device-width: 780px) {
+@media only screen and (min-device-width: 280px) and (max-width: 480px) {
     #contact {
         
-        transform: translate(-50%, -00%);
-        /* display: flex;
-        flex-direction: column; */
+        transform: translate(-50%, -20%);
+        display: flex;
+        flex-direction: column;
+        width: 20vw;
         
     }
 
     .skills-container ul {
-        width: 120vw;
+        width: 90vw;
+    }
+
+    .skills-title h4 {
+        font-size: 40px;
+    }
+
+
+    #form-wrapper {
+        transform: translate(-4%, 00%);
+        width: 90vw;
+        height: 90vh;
+        margin-top: 80vh;
     }
 
     .email-form {
-        transform: translate(22%, -12%);
+        /* transform: translate(-4%, 0%); */
         /* height: 290px; */
        /*  border: .10px solid red; */
-        width: 100vw;
+        width: 80vw;
         
     }
-
-    #form-wrapper {
-        transform: translate(-32%, 00%);
-        width: 205vw;
-        height: 125vh;
-    }
-
-    #component-wrapper {
-        width: 21vw;
-    }
-
     
-    /* .skills-container {
-        display: grid;
-        margin-top: 2rem;
-        justify-content: center;
-        grid-template-columns: auto;
-        grid-template-areas: ".skills-images" ".skill-list"
-    } */
+    
+    
+}
+
+@media only screen and (min-device-width: 375px)and (max-width: 768px) {
+    
+
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
+    
+
+}
+
+@media only screen and (min-device-width: 1000px) and (max-device-width: 1366px) {
+    
+}
 
 
-} 
+/* For Landscape view */
 
-   /* @media (min-width: 640px){
- 
-    ...
-     
-    }
-     
-    @media (min-width: 768px){
-     
-    ...
-     
-    }
-     
-    @media (min-width: 1024px){
-     
-    ...
-     
-    }
-     
-    @media (min-width: 1200px){
-     
-    ...
-     
-    } */
+/* @media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
+.projCard-container {
+  
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+width: 100%;
+
+}
+
+.projCard-container .projCard-box {
+width: 90vw;
+height: 300px;
+transform: translate(1%, 0%);
+}
+
+.projCard-container .projCard-box .img-wrapper img {
+
+
+width: 125vw;
+height: auto;
+
+}
+} */
+
+/* @media (orientation: landscape) and (min-width: 375px) and (max-width: 768px) {
+.projCard-container {
+  
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+width: 100%;
+
+}
+
+.projCard-container .projCard-box {
+width: 90vw;
+height: 300px;
+transform: translate(1%, 0%);
+}
+
+.projCard-container .projCard-box .img-wrapper img {
+
+
+width: 125vw;
+height: auto;
+
+}
+} */
+
+/* @media (orientation: landscape) and (min-width: 1000px) and (max-height: 900px) {
+
+
+} */
