--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -9,6 +9,7 @@
     position: absolute;
     top: 50%;
     left: 70%;
+    margin-top: 10vh;
     /* margin-top: 30rem;
     margin-left: 50rem; */
     transform: translate(-50%, -50%);
@@ -18,7 +19,8 @@
     display: flex;
     flex-direction: column;
     backdrop-filter: blur(10px);
-    border: .7px solid rgba(255,255,255,.2);
+    /* border: .7px solid rgba(255,255,255,.2); */
+    border: .7px solid red;
     align-items: center;
     justify-content:space-evenly;
     color: #2c426a;
@@ -206,9 +208,79 @@
     }
 
 /* THIS IS FOR RESPONSIVENESS */
-    @media (max-width: 728px) {
-        #component-wrapper {
-            grid-template-columns: auto auto;
-            grid-template-areas: "email" "skills";
-        }
+
+    @media only screen and (min-device-width: 280px) and (max-width: 480px) {
+        
     }
+
+    @media only screen and (min-device-width: 375px)and (max-width: 768px) {
+        
+
+    }
+
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
+        
+
+    }
+
+    @media only screen and (min-device-width: 1000px) and (max-device-width: 1366px) {
+        
+    }
+
+
+/* For Landscape view */
+
+/* @media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
+.projCard-container {
+      
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  
+}
+
+.projCard-container .projCard-box {
+  width: 90vw;
+  height: 300px;
+  transform: translate(1%, 0%);
+}
+
+.projCard-container .projCard-box .img-wrapper img {
+  
+ 
+  width: 125vw;
+  height: auto;
+
+}
+} */
+
+/* @media (orientation: landscape) and (min-width: 375px) and (max-width: 768px) {
+.projCard-container {
+      
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  
+}
+
+.projCard-container .projCard-box {
+  width: 90vw;
+  height: 300px;
+  transform: translate(1%, 0%);
+}
+
+.projCard-container .projCard-box .img-wrapper img {
+  
+ 
+  width: 125vw;
+  height: auto;
+
+}
+} */
+
+/* @media (orientation: landscape) and (min-width: 1000px) and (max-height: 900px) {
+    
+
+} */
