--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -47,8 +47,9 @@
 
 .fade {
   position: absolute;
-  left: 15px;
-  right: 15px;
+  /* left: 15px;
+  right: 15px; */
+  width: 100%;
 }
 
 /* Route-Transition Styling */
