--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -11,15 +11,19 @@
 /* PART A: THIS IS TO BUILD THE CARDS ASSORTED IN ROWS*/
   /* 1) Basic layout of the parent projCard-container*/
   .projCard-container {
-    width: 1550px;
+    width: 100%;
     min-height: 50px;
-    margin: 70px auto 0;
-    margin-top:5rem;
-    display: flex;
+    margin-top: 10px;
+    
+    display: grid;
     flex-direction: row;
     flex-wrap: wrap;
-    
+    /* border: 1px solid #BF4E30; */
     /* background-color: orangered; */
+    grid-template-columns: 50% 50%;
+    /* grid-gap: 10px; */
+    /* grid-template-rows: auto auto auto; */
+    
   }
 
   .projCard-container:hover {
@@ -31,12 +35,13 @@
   /* E.g. without it, you similar sized boxes with width and height would be LARGER due to padding added*/
   .projCard-container .projCard-box {
     position: relative;
-    width: 750px;
+    
     height: 300px;
     margin: 10px;
     box-sizing: border-box;
     display: inline-block;
     overflow: hidden;
+    /* border: 1px solid #BF4E30; */
     /* border-radius: 18px; */
     /* border: 1px solid #BF4E30; */
     /* background: #ff0; */
@@ -124,20 +129,22 @@
     /* For Portrait view */
 
     @media only screen and (min-device-width: 280px) and (max-width: 480px) {
+ 
       .projCard-container  {
-         
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         width: 100%;
-      
+        margin-top: 10px;
+        /* border: .7px solid red; */
       }
 
       .projCard-container .projCard-box {
-        width: 90vw;
+        width: 100%;
         height: 300px;
-        transform: translate(-3%, -10%);
-        
+        /* transform: translate(-3%, -10%); */
+        /* border: .7px solid yellow; */
+        margin: 0px;
       }
 
       .projCard-container .projCard-box .img-wrapper {
@@ -145,7 +152,7 @@
         background-size: cover;
         background-position: center;
         height: 300px;
-      
+        /* border: 1px solid orange; */
       }
 
       .projCard-container .projCard-box .img-wrapper img {
@@ -169,29 +176,24 @@
           flex-direction: column;
           flex-wrap: wrap;
           width: 100%;
+          margin-top: 10px;
           
       }
 
       .projCard-container .projCard-box {
-        width: 90vw;
+        width: 100%;
         height: 300px;
-        transform: translate(-2%, 0%);
+        /* transform: translate(-2%, 0%); */
+        margin: 0px;
+        
       }
 
       .projCard-container .projCard-box .img-wrapper {
-       
+        width: 100%;
         background-size: cover;
         background-position: center;
         height: 300px;
       
-      }
-
-      .projCard-container .projCard-box .img-wrapper img {
-       
-        max-width: 180%;
-        padding-right: 15rem;
-        height: 300px;
-
       }
 
       .projCard-container .projCard-box .details-box .content-box p {
@@ -209,12 +211,12 @@
       flex-direction: column;
       flex-wrap: wrap;
       width: 100%;
-      
+      margin-top: 10px;
     }
 
     .projCard-container .projCard-box {
-      margin-top: 2rem;
-      width: 90vw;
+      margin-top: 0px;
+      width: 100%;
       /* border: solid purple; */
       transform: translate(2%, 0%);
       box-sizing: border-box;
@@ -329,25 +331,23 @@
   }
 
   .projCard-container .projCard-box {
-    width: 90vw;
+    width: 100%;
     height: 300px;
-    transform: translate(1%, 0%);
+    /* transform: translate(1%, 0%); */
+  }
+
+  .projCard-container .projCard-box .img-wrapper {
+    width: 100%;
   }
 
   .projCard-container .projCard-box .img-wrapper img {
-    
-   /*  max-width: 180%;
-    padding-right: 20rem;
-    padding-bottom: 20rem;
-    width: 125vw;
-    height: auto; */
-    width: 125vw;
-    height: auto;
+    max-width: 100%;
+    /* border: .7px solid red; */
 
   }
 }
 
-/* @media (orientation: landscape) and (min-width: 375px) and (max-width: 768px) {
+@media (orientation: landscape) and (min-width: 768px) and (max-width: 1000px) {
   .projCard-container {
         
     display: flex;
@@ -358,16 +358,18 @@
   }
 
   .projCard-container .projCard-box {
-    width: 90vw;
+    width: 100%;
     height: 300px;
-    transform: translate(1%, 0%);
+    transform: translate(0%, 0%);
+    margin: 0px;
+  }
+
+  .projCard-container .projCard-box .img-wrapper {
+    width: 100%;
   }
 
   .projCard-container .projCard-box .img-wrapper img {
-    
-   
-    width: 125vw;
-    height: auto;
-
+    max-width: 100%;
+    /* border: .7px solid red; */
   }
-} */
+}
