--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -228,6 +228,8 @@
     align-items: center;
     justify-content: space-between;
     padding-top: 1rem;
+    margin-top: 8rem;
+    position: relative
 }
 
 .links-about a{
@@ -471,16 +473,25 @@
 
         .sideBio .links-about {
             
-            padding-top: 0;
-            transform: translate(-18%, -70%);
+            /* padding-top: 0; */
+            /* transform: translate(-18%, -70%); */
+            display: grid;
+            grid-template-columns: 50% 50%;
+            /* margin-top: 1.5rem; */
+            justify-content: center;
+            align-items: center;
+            margin: 1rem;
+            /* padding: 1rem; */
         }
 
         .sideBio .links-about a{
             
-            width: 120px;
+            width: 100%;
             /* height: 70px; */
-            padding: .8rem;
-            
+            /* padding: 1rem; */
+            margin: 0rem 10px 25px 0px;
+            /* justify-content: center; */
+            /* align-items: center; */
         }
 
         .sideBio p {
