--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -207,8 +207,10 @@
   @media only screen and (min-device-width: 768px) and (max-device-width: 1000px) {
     .projCard-container {
          
-      display: flex;
-      flex-direction: column;
+      /* display: flex; */
+      /* flex-direction: column; */
+      display: grid;
+      grid-template-columns: 50% 50%;
       flex-wrap: wrap;
       width: 100%;
       margin-top: 10px;
@@ -218,9 +220,10 @@
       margin-top: 0px;
       width: 100%;
       /* border: solid purple; */
-      transform: translate(2%, 0%);
+      /* transform: translate(2%, 0%); */
       box-sizing: border-box;
       display: inline-block;
+      /* margin: 0px; */
     }
 
     .projCard-container .projCard-box .img-wrapper {
@@ -229,12 +232,14 @@
       background-position: center;
       height: 300px;
       /* border: solid yellow; */
-    
+      /* height: 400px; */
+      width: 100%;
+      padding: 1rem;
     }
 
     .projCard-container .projCard-box .img-wrapper img {
-      width: 125vw;
-      height: auto;
+      width: 100%;
+      height: 100%;
     }
 
     .projCard-container .projCard-box .details-box {
@@ -250,16 +255,18 @@
     .projCard-container .projCard-box .details-box .content-box {
       
       /* border: solid brown; */
-      top: 60px;
-      transform: translate(20%, -12%);
+      top: 50%;
+      /* transform: translate(20%, -12%); */
       /* width: 500px; */
-      width:60vw;
+      width:100%;
     }
 
     .projCard-container .projCard-box .details-box .content-box p {
-      font-size: 45px;
+      font-size: 40px;
       /* border: solid black; */
-      margin: 10px 0 0;
+      /* margin: 10px 0 0; */
+      /* margin-top: 11rem; */
+      margin: 0px;
     }
 
   }
@@ -267,53 +274,58 @@
   @media only screen and (min-device-width: 1000px) and (max-device-width: 1366px) {
     .projCard-container {
          
-      display: flex;
+      display: grid;
+      grid-template-columns: 50% 50%;
       flex-direction: row;
       flex-wrap: wrap;
       width: 100%;
-      
+      /* grid-gap: 10px; */
+      margin-top: 2rem;
     }
 
     .projCard-container .projCard-box {
-      width: 90vw;
-      height: 300px;
+      width: 100%;
+      height: auto;
       box-sizing: border-box;
       display: inline-block;
-      transform: translate(3.5%, 0%);
+      /* transform: translate(3.5%, 0%); */
+      margin: 0px 00px 0px 0px;
+      padding: .5rem;
     }
 
     .projCard-container .projCard-box .img-wrapper {
     
       background-size: cover;
       background-position: center;
-      height: 300px;
-    
+      height: 400px;
+      width: 100%;
     }
 
     .projCard-container .projCard-box .img-wrapper img {
     
-      max-width: 180%;
-      padding-right: 20rem;
-      padding-bottom: 20rem;
-      width: 125vw;
-      height: auto;
+      /* padding-right: 20rem;
+      padding-bottom: 20rem; */
+      width: 100%;
+      height: 100%;;
+      /* margin: 0px 00px 0px 20px; */
 
     }
 
     .projCard-container .projCard-box .details-box .content-box {
       
       /* border: solid brown; */
-      top: 60px;
-      transform: translate(5%, -20%);
-      width:80vw;
+      top: 25%;
+      /* transform: translate(5%, -20%); */
+      width:100%;
       /* border: solid yellow; */
     }
 
     .projCard-container .projCard-box .details-box .content-box p {
-      font-size: 60px;
+      font-size: 3rem;
       margin-top: 11rem;
-      transform: translate(0%, -70%);
+      /* transform: translate(0%, -70%); */
       /* border: solid brown; */
+      
     }
   }
 
