--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -145,6 +145,7 @@
         /* transform: translate(-3%, -10%); */
         /* border: .7px solid yellow; */
         margin: 0px;
+        padding: .5rem;
       }
 
       .projCard-container .projCard-box .img-wrapper {
@@ -345,6 +346,7 @@
   .projCard-container .projCard-box {
     width: 100%;
     height: 300px;
+    padding: .5rem;
     /* transform: translate(1%, 0%); */
   }
 
