--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -576,8 +576,8 @@
         .sideBio .links-about {
             
             padding-top: 0;
-            display: grid;
-            grid-template-columns: 50% 50%;
+            display: flex;
+            /* grid-template-columns: 50% 50%; */
             margin: 0px;
         }
 
