--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -23,13 +23,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    Margin-top: 24rem;
+    Margin-top: 40rem;
 }
 
 #bio-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
+    /* margin-top: 20rem; */
 }
 
 /* FOR THE IMG CARDS */
@@ -310,8 +311,9 @@
 /* PART A: THIS IS TO BUILD THE CARDS ASSORTED IN ROWS*/
   /* 1) Basic layout of the parent container*/
   .container {
-    width: 1280px;
-    min-height: 50px;
+    width: 100%;
+    /* min-height: 50px; */
+    height: 100%;
     margin: 1px auto 0;
     display: flex;
     flex-direction: row;
@@ -419,7 +421,6 @@
 
         .container {
             width: 100%;
-            /* transform: translate(-10%, 0%); */
         }
 
         .container .card {
@@ -521,9 +522,17 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            height: 1500px;
+           /*  height: 100%; */
             
         }
+
+      /*   .container .card .card-1{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            height: 1000px;
+            
+        } */
 
         .container .card h2 {
             font-size: 13px;
