--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -426,7 +426,7 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            height: 1000px;
+            /* height: 10; */
         }
 
 
