--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -30,7 +30,7 @@
   .card {
     margin: 5px auto 0;
     width: 1200px;
-    height: 600px;
+    height: /* 600px */ 35rem;
     perspective: 1000px;
     display: flex;
     flex-direction: row;
